Added a delete button to Burgers we've eaten so that they get removed from the list

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,6 +15,7 @@
     {{#if devoured}}
     <li>
         {{burger_name}}
+        <button class="delete-burger" data-id="{{this.id}}">Delete!</button>
     </li>
     {{/if}}
     {{/each}}
