--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,6 @@
 <li>
 	{{burger_name}}
-	<button class="change-devoured" data-id="{{id}}" data-devoured="{{devoured}}">
+	<button class="change-devoured btn btn-warning" data-id="{{id}}" data-devoured="{{devoured}}">
 		Eat da burger
 	</button>
 </li>
